--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <title>Feeder Portal</title>
-        <base href="/">
+        <base href="/feederapp">
 
         <meta charset="utf-8">
         <meta name="description" content="">
