--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <title>Feeder Portal</title>
-        <base href="/feederapp">
+        <base href="/">
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -12,9 +12,9 @@
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="icon" type="image/x-icon" href="assets/icons/feeder/favicon.png">
-        <link href="assets/icons/meteocons/style.css" rel="stylesheet">
-        <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="feederapp/assets/icons/feeder/favicon.png">
+        <link href="feederapp/assets/icons/meteocons/style.css" rel="stylesheet">
+        <link href="feederapp/assets/icons/material-icons/outline/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
 
         <!-- FUSE Splash Screen CSS -->
