--- a/index.html
+++ b/index.html
@@ -233,6 +233,12 @@
 
         <app></app>
 
-    <script src="feederapp/runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.3d46976420fe286b7d89.js" nomodule defer></script><script src="polyfills-es2015.77fd33a57e50df0ab61b.js" type="module"></script><script src="main-es2015.6cb12a669cd768bdbdec.js" type="module"></script><script src="main-es5.6cb12a669cd768bdbdec.js" nomodule defer></script></body>
+    <script src="feederapp/runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script>
+	<script src="feederapp/runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script>
+	<script src="feederapp/polyfills-es5.3d46976420fe286b7d89.js" nomodule defer></script>
+	<script src="feederapp/polyfills-es2015.77fd33a57e50df0ab61b.js" type="module"></script>
+	<script src="feederapp/main-es2015.6cb12a669cd768bdbdec.js" type="module"></script>
+	<script src="feederapp/main-es5.6cb12a669cd768bdbdec.js" nomodule defer></script>
+	</body>
 
 </html>
