--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
 
         <title>Feeder Portal</title>
-        <base href="/">
+        <base href="/feederapp/">
 
         <meta charset="utf-8">
         <meta name="description" content="">
@@ -12,9 +12,9 @@
         <meta name="author" content="Withinpixels">
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-        <link rel="icon" type="image/x-icon" href="feederapp/assets/icons/feeder/favicon.png">
-        <link href="feederapp/assets/icons/meteocons/style.css" rel="stylesheet">
-        <link href="feederapp/assets/icons/material-icons/outline/style.css" rel="stylesheet">
+        <link rel="icon" type="image/x-icon" href="assets/icons/feeder/favicon.png">
+        <link href="assets/icons/meteocons/style.css" rel="stylesheet">
+        <link href="assets/icons/material-icons/outline/style.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Muli:300,400,600,700" rel="stylesheet">
 
         <!-- FUSE Splash Screen CSS -->
@@ -196,7 +196,7 @@
 }
         </style>
         <!-- / FUSE Splash Screen CSS -->
-    <link rel="stylesheet" href="feederapp/styles.a7e5cabe0dff06f447f7.css"></head>
+    <link rel="stylesheet" href="styles.a7e5cabe0dff06f447f7.css"></head>
 
     <body>
 
@@ -233,12 +233,6 @@
 
         <app></app>
 
-    <script src="feederapp/runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script>
-	<script src="feederapp/runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script>
-	<script src="feederapp/polyfills-es5.3d46976420fe286b7d89.js" nomodule defer></script>
-	<script src="feederapp/polyfills-es2015.77fd33a57e50df0ab61b.js" type="module"></script>
-	<script src="feederapp/main-es2015.6cb12a669cd768bdbdec.js" type="module"></script>
-	<script src="feederapp/main-es5.6cb12a669cd768bdbdec.js" nomodule defer></script>
-	</body>
+    <script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.3d46976420fe286b7d89.js" nomodule defer></script><script src="polyfills-es2015.77fd33a57e50df0ab61b.js" type="module"></script><script src="main-es2015.6cb12a669cd768bdbdec.js" type="module"></script><script src="main-es5.6cb12a669cd768bdbdec.js" nomodule defer></script></body>
 
 </html>
